packages/cdk/styles/typography.css
@import 'https://use.typekit.net/dxw6otc.css';

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 100;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-Thin.ttf') format('opentype');
    font-display: swap;
}

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 300;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-Light.ttf') format('opentype');
    font-display: swap;
}

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 400;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-Regular.ttf') format('opentype');
    font-display: swap;
}

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 500;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-Medium.ttf') format('opentype');
    font-display: swap;
}

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 600;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-SemiBold.ttf') format('opentype');
    font-display: swap;
}

@font-face {
    font-family: 'DiisMonospace';
    font-weight: 700;
    font-style: normal;
    src: url('../Fonts/DiisMonospace/DiisMonospace-Bold.ttf') format('opentype');
    font-display: swap;
}

article header {
    line-height: 1.125;
}

.serif {
    text-rendering: optimizelegibility;
}

.serif.f-6,
.serif.f-7 {
    text-rendering: geometricprecision;
}

.sans {
    text-rendering: optimizelegibility;
}

.body > *:empty {
    display: none;
}

.body blockquote {
    margin: var(--gap) 0;
    padding: 0 0 0 3em;
    font-family: var(--font-serif);
    font-size: var(--font-size-4);
    font-weight: 300;
    font-style: italic;
}

.claim {
    margin: 0;
    font-family: var(--font-serif);
    font-size: var(--font-size-9);
    font-weight: 300;
    font-style: normal;
    line-height: 1.267em;
    text-rendering: geometricprecision;
}

.balance {
    text-wrap: balance;
}

.body > *:first-child,
.description > *:first-child {
    margin-top: 0;
}

.body > *:last-child,
.description > *:last-child {
    margin-bottom: 0;
}

.body p,
.description p {
    width: 100%;
    margin: 0;
}

.description p {
    line-height: 1.25;
}

.body p {
    line-height: 1.5;
}

:is(.body, .description)
    > :is(p, ul, ol, [data-placeholder], .gallery_container, .media_container)
    + :is(p, ul, ol, [data-placeholder], .gallery_container, .media_container) {
    margin-top: var(--gap);
}

.body > [data-placeholder] {
    width: 100%;
}

.description a,
.body a {
    text-decoration: underline;
    text-decoration-color: var(--color-accent);
}

.body ul,
.body ol {
    margin: var(--gap) 0 0;
    line-height: 1.5;
}

.body h1,
.body h2,
.body h3,
.body h4,
.body h5,
.body h6 {
    margin: 1em 0 0.75em;
    font-weight: normal;
    line-height: 1.125;
}

.body h2 {
    font-size: var(--font-size-6);
}

.body h3 {
    font-size: var(--font-size-5);
    font-style: italic;
}

.body h4 {
    font-size: var(--font-size-5);
    font-weight: normal;
}

.upper {
    text-transform: uppercase;
}

.lower {
    text-transform: lowercase;
}

.medium {
    font-weight: 500;
}

.text-underline {
    text-decoration: underline;
}

.slideshow__arrows {
    font-family: var(--font-mono);
    font-size: var(--font-size-2);
}

.hidden-title {
    position: absolute;
    width: 0;
    height: 0;
    margin: 0;
    padding: 0;
    overflow: hidden;
    white-space: nowrap;
    border: 0;
}

.pagination {
    user-select: none;
}

